feat: 스웨거 UI에 JWT 토큰 인증 추가